# cami

./: .gitignore  AGENT.md  Dockerfile  README.md  cli.py  docker-compose.yml  hypercorn.toml  main.py  pyproject.toml  requirements.txt
.zed/: settings.json
cami/: __init__.py  agent.py  agents.py  config.py  fb.py  hospital.py  main.py  patient.py  prompts.py  root_agent.py  run.py  server.py  session.py  test.py  tools.py  user_policy.py
cami/agent/: agent.py  prompts.py
cami/agent/tools/: tools.py
cami/agents/: __init__.py  agents.py  root.py
cami/infra/: firebase.py  session.py
cami/policy/: __init__.py  agent.py  db.py  hooks.py  patient_policy.py  policy.py  schema.py  tools.py
cami/prompts/: __init__.py  base.py  prompts.py
cami/rule_engine/: __init__.py  agents.py  claim.py  db_utils.py  engine.py  formatter_agent.py  local.py  patient.py  policy.py  prompts.py  rule_engine_agent.py  tools.py
cami/rule_engine/policies/: default.json
cami/runs/: background.py
cami/services/: red.py
cami/storage/: cami-lite.md  cami-pro.md  default-policy.json  network-hospitals.json  policies.py  policy-lite.md  report.py  sublimits.md  top10-procedures.json
cami/tools/: __init__.py  base.py  tools.py
cami/user/: db.py  tools.py  user.py
cami/utils/: __init__.py  common.py  logger.py  types.py
cami/workers/: background.py
tests/: test_main.py
